@@ -23,6 +23,16 @@ keep_output_files = True
 # number of precision digits used in scoring
 precision = 0
 
+# whether to use colors in the leaderboard
+show_colors = True 
+# allowed colors: BLACK, RED, GREEN, YELLOW, BLUE, MAGENTA, CYAN, WHITE, DEFAULT (DEFAULT means using default terminal color)
+# you can also use BRIGHT_ and DIM_ prefixes (e.g. BRIGHT_RED) to make the color brighter/darker (note that DIM_ probably won't work in most terminals)
+header_color = BRIGHT_DEFAULT
+even_row_color = YELLOW
+odd_row_color = DEFAULT
+# for group_max_color, you can additionally use the following values: BRIGHT_*, DIM_*, *_COLOR (where COLOR is one of the colors above); those will only update specified style or color without affecting the other
+group_max_color = GREEN
+
 # show: defines the order of columns in the leaderboard
 # leaderboard_score is the default one used for score
 # leaderboard_custom is used when supplied with --var 
